Fixed arrow horizontal aligned)

--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -24,7 +24,8 @@ header {
 .header-arrow {
   position: absolute;
   bottom: 10%;
-  left: 45%;
+  left: 50%;
+  transform: translate(-50%, 0);
   animation-name: bounce-arrow;
   animation-duration: 3s;
   animation-iteration-count: infinite;
@@ -34,9 +35,9 @@ header {
   margin: 0 auto;
 }
 @keyframes bounce-arrow {
-  0% {transform: translate3d(0,0,0);}
-  50% {transform: translate3d(0,50px,0);}
-  100% {transform: translate3d(0,0,0);}
+  0% {transform: translate(-50%,0);}
+  50% {transform: translate(-50%,50px);}
+  100% {transform: translate(-50%,0);}
 }
 
 //Navigation
